[tool.poetry]
name = "xai-yolov7-gradcam"
version = "0.1.0"
description = ""
authors = ["Olivier-2018 <80416841+olivier-2018@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "xai_yolov7_gradcam"}]

[tool.poetry.dependencies]
python = "3.8.10"
matplotlib = "^3.6.3"
numpy = "1.23"
opencv-python = "^4.7.0.68"
Pillow = "^9.4.0"
PyYAML = "^6.0"
requests = "^2.31.0"
spicy = "^0.16.0"
torch = "1.11"
torchvision = "0.12"
tqdm = "^4.64.1"
protobuf = "4.21.2"
tensorboard = "^2.4.1"
pandas = "^1.5.3"
seaborn = "^0.12.2"
ipython = "^8.8.0"
psutil = "^5.9.4"
thop = "^0.1.1.post2209072238"
grad-cam = "^1.4.6"
ipykernel = "^6.20.2"
Js2Py = "^0.74"
hiddenlayer = "^0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
